@@ -21,6 +21,7 @@
 	(PokerRendererTests.test07_chatFormatMessage): Wrote method.
 	(PokerRendererTests.test08_chatLineNoGame): Wrote method.
 	(PokerRendererTests.test09_showMessageNoCallback): Wrote method.
+	(PokerRendererTests.test10_updateCashier): Wrote method.
 
 2008-07-07  Johan Euphrosine  <proppy@aminche.com>
 
